# evidenceai

./: .env.development  .env.example  .env.staging  .eslintrc.chunking.js  .gitignore  CHANGELOG.md  CHECKPOINT.md  CODE_OF_CONDUCT.md  COMMIT_DETAILS.md  COMMIT_MSG.txt  CONTRIBUTING.md  CURRENT_STATE.md  DEVELOPMENT_PROTOCOL.md  Dockerfile  LICENSE  PROJECT_CONTEXT.md  README.md  TIMELINE_CONTROL.md  cleanup.bat  cline-init.js  consolidate.bat  debug-context.md  debug-pipeline.bat  demo.html  dev.bat  dev_protocol.html  docker-compose.staging.yml  docker-compose.yml  end_session.js  evidenceai.code-workspace  init_context.bat  init_context.ps1  jest.config.js  jest.staging.config.js  nodemon.json  package-lock.json  package.json  prepare-for-chatgpt.bat  process-evidence.bat  process-evidence.ps1  (+30 more)
.cline/: README.md  context.json
.husky/: pre-commit
.vscode-user/: Local State  machineid
Web/: EvidenceAI Square Website  dashboard-redesign.html  dashboard-with-llm.html  index.html  mission-control-v2.html  mission-control.html  pipeline-monitor.html
config/: feature-flags.js  google-auth-config.example.js  google-auth-config.js
docs/: APPROACH_SUMMARY.md  ATTRIBUTION_VALIDATION.md  BYPRODUCTS_INCUBATION.md  CHATGPT_EVIDENCE_ANALYSIS.md  CHATGPT_MANUAL_PROCESS.md  CLEANUP_PLAN.md  CONSOLIDATION_PLAN.md  CONTENT_DEDUPLICATION.md  CORRELATION_GUIDE.md  CURRENT_STATE.md  DATA_SOURCE_COMBINATIONS.md  ELEGANT_SOLUTION.md  EMAIL_PARSER_ANALYSIS.md  EMPOWERING_TOOLS.md  ENHANCED_IMPLEMENTATION_PLAN.md  EVIDENCE_CENTRIC_ARCHITECTURE.md  EVIDENCE_CHAIN_EXAMPLE.md  (+41 more)
(+428 files in other folders)
